--- a/CSS Designs/LoginMenu.css
+++ b/CSS Designs/LoginMenu.css
@@ -17,6 +17,12 @@
     align-content: center;
 }
 
+#welcomeHeader {
+    margin-bottom: 20px;
+    margin-left: 10px;
+    align-content: center;
+}
+
 .ui.form {
     padding: 13px;
 }
@@ -30,34 +36,23 @@
     margin-top: 10px;
 }
 
-#loginText {
+.signup-login-text {
     text-align: center;
     height: 60px;
     transition: 0.4s;
+    vertical-align: middle;
+    line-height: 60px;
 }
 
-#loginText:hover {
+
+.signup-login-text:hover {
     background-color: lightgrey;
     cursor: pointer;
 }
 
-#signupText:hover {
-    cursor: pointer;
-    background-color: lightgrey;
-}
 
-#signupText {
-    text-align: center;
-    height: 60px;
-    transition: 0.4s;
-}
-
-#loginTextP {
-    margin-top: 15px;
-}
-
-#signupTextP {
-    margin-top: 15px;
+.signup-login-paragraph {
+    margin-top: 25px;
 }
 
 #logoImage {
@@ -76,13 +71,20 @@
     letter-spacing: 2px;
 }
 
-#paragraphInput1 {
+.paragraphInput {
     margin-bottom: 10px;
 }
 
-#paragraphInput2 {
-    margin-bottom: 10px;
-}
+
+
+
+
+
+
+
+
+
+
 
 
 
