--- a/CSS Designs/Header.css
+++ b/CSS Designs/Header.css
@@ -34,7 +34,9 @@ body {
     flex-direction: row;
     padding: 0 10px;
     color: var(--Header-Text-Color);
-    margin-top: 4px;
+    /*margin-top: 4px;*/
+    vertical-align: middle;
+    line-height: 36px;
 }
 
 .Header-Link {
