--- a/CSS Designs/LoginMenu.css
+++ b/CSS Designs/LoginMenu.css
@@ -1,7 +1,11 @@
+:root {
+    --ActiveSignUpLoginButton: #21BA45;
+}
+
+
 #Login-Menu {
     width: 440px;
     display: none;
-
 }
 
 
@@ -9,22 +13,6 @@
     display: flex;
     flex-direction: column;
     padding-top: 0px;
-}
-
-#welcomeHeader {
-    margin-bottom: 20px;
-    margin-left: 10px;
-    align-content: center;
-}
-
-#welcomeHeader {
-    margin-bottom: 20px;
-    margin-left: 10px;
-    align-content: center;
-}
-
-.ui.form {
-    padding: 13px;
 }
 
 #Signup-Login {
@@ -43,48 +31,46 @@
     vertical-align: middle;
     line-height: 60px;
 }
-
-
 .signup-login-text:hover {
     background-color: lightgrey;
     cursor: pointer;
 }
-
-
-.signup-login-paragraph {
-    margin-top: 25px;
+.signup-login-text:active {
+    background-color: var(--ActiveSignUpLoginButton);
+    transition: 0.5s;
 }
 
 #logoImage {
-    height: 100px;
-    margin-bottom: 50px;
+    /* height: 100px; */
+    display: block;
+    margin: 0 auto;
 }
 
-.loginFooter {
-    font-size: 16px;
-    text-align: right;
-    margin-right: 50px;
-    margin-bottom: 20px;
+#welcomeHeader {
+    margin-top: 0;
+    align-content: center;
+    text-align: center;
 }
 
-#loginButton {
-    letter-spacing: 2px;
+
+.ui.form {
+    padding: 13px;
 }
 
 .paragraphInput {
     margin-bottom: 10px;
 }
 
+#Login-Footer-Form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
 
+#loginButton {
+    letter-spacing: 2px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
+.loginFooter {
+    font-size: 16px;
+}
