--- a/CSS Designs/LoginMenu.css
+++ b/CSS Designs/LoginMenu.css
@@ -33,13 +33,13 @@
 .Signup-login-text {
     text-align: center;
     height: 60px;
-    /*transition: 0.4s;*/
+    transition: 0.4s;
     vertical-align: middle;
     line-height: 60px;
     background-color: white;
 }
 .Signup-login-text:hover {
-    /*background-color: lightgrey;*/
+    background-color: green;
     opacity: 0.7;
     cursor: pointer;
 }
