--- a/CSS Designs/LoginMenu.css
+++ b/CSS Designs/LoginMenu.css
@@ -1,5 +1,6 @@
 :root {
     --ActiveSignUpLoginButton: #21BA45;
+    --MenuChangeDuration: 0.4s;
 }
 
 
@@ -8,11 +9,9 @@
     display: none;
 }
 
-/*
-#SignUp-Menu {
-    display: none;
+.Login-SignUp-Menu {
+    transition: display var(--MenuChangeDuration);
 }
-*/
 
 
 #Login-Menu-Header {
@@ -33,7 +32,7 @@
 .Signup-login-text {
     text-align: center;
     height: 60px;
-    transition: 0.4s;
+    transition: var(--MenuChangeDuration);
     vertical-align: middle;
     line-height: 60px;
     background-color: white;
@@ -82,4 +81,8 @@
 #LoginMenu-SignUp-Link {
     line-height: 36px;
     padding-right: 15px;
+}
+
+#isFreeLancer-ToggleButton {
+    padding-left: 14px;
 }
