First Of Main Functions

--- a/CSS Designs/loginSignupInput.css
+++ b/CSS Designs/loginSignupInput.css
@@ -1,9 +1,5 @@
 :root {
-    --userNameMaxLength: 30;
-    --passwordMaxLength: 30;
-    --emailMaxLength: 60;
-    --firstNameMaxLength: 30;
-    --lastNameMaxLength: 40;
+
 }
 
 #isFreeLancer-ToggleButton {
@@ -12,14 +8,9 @@
 
 .paragraphInput {
     margin-bottom: 10px;
+    /*textDesign*/
 }
 
-#SignUp-UserName {
-
-}
-
-#SignUp-FirstName {
-}
-
-#SignUp-LastName {
+#isFreeLancer-ToggleDiv {
+    padding-left: 14px;
 }
